- fixed step heading to increment only on numbered headings - added `.dmb-u-underlined-heading` - added consistent classes to the sidepanels - added bullet as an image so that it can be used in sidepanel `list-style-image` - made vertical spacing utility classes `!important` #339

--- a/src/static/src/scss/_utils.scss
+++ b/src/static/src/scss/_utils.scss
@@ -46,19 +46,19 @@ $positions: (top, bottom);
         @each $size in (s, m, l) {
           &-#{$size} {
             $spacings: map-get($dmb-vertical-spacings, #{$size});
-            #{$prop}-#{$position}: map-get($spacings, 'mobile');
+            #{$prop}-#{$position}: map-get($spacings, 'mobile')  !important;
 
             // Add tablet spacings if different from mobile
             @if map-get($spacings, 'mobile') != map-get($spacings, 'tablet') {
               @include dmb-mq($from: tablet) {
-                #{$prop}-#{$position}: map-get($spacings, 'tablet');
+                #{$prop}-#{$position}: map-get($spacings, 'tablet') !important;
               }
             }
 
             // Add desktop spacings if different from tablet
             @if map-get($spacings, 'tablet') != map-get($spacings, 'desktop') {
               @include dmb-mq($from: desktop) {
-                #{$prop}-#{$position}: map-get($spacings, 'desktop');
+                #{$prop}-#{$position}: map-get($spacings, 'desktop') !important;
               }
             }
           }
@@ -108,5 +108,12 @@ $positions: (top, bottom);
   &--left {
     background-position: left 10px center !important;
     padding-left: calc(1em + 20px) !important;
+  }
+}
+
+.dmb-u-underlined-heading {
+  span {
+    border-bottom: 6px solid $dmb-color-grey-zircon;
+    padding-bottom: 15px;
   }
 }
